# ffgl-omt

./: LICENSE.md
src/: CMakeLists.txt
src/source/plugins/MinTest/: MinTest.cpp  MinTest.h
src/source/plugins/OMTReceive/: HoldingImage.h  OMTReceive.cpp  OMTReceive.h
src/source/plugins/OMTSend/: OMTSend.cpp  OMTSend.h
src/source/shared/: OMTVideoBuffer.h
